mac: Fix incorrect transparent background color

This makes a distinction between
- the background color for interstitial flashes when content isn't
  available
- whether or not the background of the page is opaque

Then, it ensures that whenever the background color is being queried
to be used as an interstitial background color, the result always be
opaque.

It may be a decent follow-on exercise to this would be to break
RenderWidgetHostView::SetBackgroundColor into two functions, namely
- RenderWidgetHostView::SetBackgroundIsOpaque
- RenderWidgetHostView::SetInterstitialBackgroundColor
This would clarify the only contexts in which the interstitial
background color is to be shown, and divorce it from opacity (the color
is not to be shown while the content is shown).

While we're in the neighborhood, get rid of the values that were setting
and returning from -[NSView isOpaque]. Our NSViews are layer hosting, so
opacity of the view is completely disregarded (the alpha channel of the
IOSurfaces we use is always read and used for transparency).

Bug: 735407
Change-Id: I8b31fd81650421182842e5bb53215fc3c8067bd0
Reviewed-on: https://chromium-review.googlesource.com/607608
Commit-Queue: ccameron chromium <ccameron@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493345}
Former-commit-id: bb022357740c88dde09d3d2de6fd364c515714c2